--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Калькулятор</title>
 </head>
 <body>
-     <div id="date">
+     <div id="date" class="">
       <p>дата и время: {{ currentDate }}</p>
      </div>
       <br>
